--- a/easy_table/public/index.html
+++ b/easy_table/public/index.html
@@ -11,7 +11,31 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app" style="" ></div>
     <!-- built files will be auto injected -->
+
+    <canvas id="c" width="600" height="600" style="position:fixed;top:0; z-index:99999;opacity: 0.3;pointer-events:none;"></canvas>
+
+    <script id="shader-fs" type="x-shader/x-fragment">
+    #ifdef GL_ES
+      precision highp float;
+      #endif
+    void main(void) {
+      gl_FragColor = vec4(0.2, 0.3, 0.4, 1.0);
+    }
+  </script>
+
+    <script id="shader-vs" type="x-shader/x-vertex">
+    attribute vec3 vertexPosition;
+
+  	uniform mat4 modelViewMatrix;
+  	uniform mat4 perspectiveMatrix;
+
+   	void main(void) {
+  		gl_Position = perspectiveMatrix * modelViewMatrix * vec4(  vertexPosition, 1.0);
+  	}
+  </script>
+
+    <script src="web.js"></script>
   </body>
 </html>
